# Orket

./: .coverage  .dockerignore  .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CODE_REVIEW.md  COMMERCIAL_LICENSE.md  CONTRIBUTING.md  CURRENT_AUTHORITY.md  Dockerfile  LICENSE  README.md  RECONSTRUCTION_STATUS.md  band.schema.json  build_orket.ps1  config.json  coverage.json  dispatcher.py  enforcement_output.txt  extractor.py  final_failures.txt  main.py  orket_persistence.db  package.json  permissions.json  policy.json  project_dump.py  project_dump_small.txt  project_dumper_small.py  pyproject.toml  requirements.txt  review-git-diffstat.txt  review-git-head.txt  review-git-status.txt  review-working-tree.patch  score.schema.json  server.err  server.py  (+2 more)
.ci/: ci_failure_policy.json  packages.json  packages.template.json
.claude/: settings.local.json
.githooks/: pre-commit
.tmp/: companion_avatar_pdf_extract.txt  piper_cli_wrapper.cmd
bands/: band_loader.py  standard.json
benchmarks/: README.md  phase5_load_test.py
config/: architecture.json  bottleneck_thresholds_example.json  org_info.json  organization.json
coordinator/: main.py  models.py
demos/: README.md  priority.py  wait_reason.py
docs/: API_FRONTEND_CONTRACT.md  ARCHITECTURE.md  BENCHMARK_FAILURE_LEDGER.md  BRUTAL_PATH.md  CODE_REVIEW_2026-02-09.md  CONTRIBUTOR.md  CREDENTIALS.md  FAILURE_RECOVERY.md  FIRST_RUN_SETUP.md  GITEA_BACKUP_STRATEGY.md  GITEA_STATE_OPERATIONAL_GUIDE.md  GITEA_WEBHOOK_SETUP.md  LOCAL_CLEANUP_POLICY.md  MASTER_ROADMAP.md  OrketArchitectureModel.md  PHASE3_INTEGRATION.md  PRODUCT_PUBLISHING.md  PROGRAM_LEVEL_TASK_001_PROMPT_AND_RUBRIC.md  PROJECT.md  PR_REVIEW_POLICY.md  QUANT_SWEEP_RUNBOOK.md  README.md  ROADMAP.md  RUNBOOK.md  SECURITY.md  SECURITY_AUDIT_2026-02-11.md  TESTING_POLICY.md  bottleneck_thresholds.md  examples.md
docs/templates/external_extension/: MANIFEST.in  README.md  extension.yaml  pyproject.toml
docs/templates/external_extension/.gitea/workflows/: ci.yml  release.yml
docs/templates/external_extension/config/: defaults.json
docs/templates/external_extension/config/modes/: general_assistant.json  programmer.json  researcher.json  strategist.json  supportive_listener.json  tutor.json
docs/templates/external_extension/config/styles/: intermediate.json  platonic.json  romantic.json
docs/templates/external_extension/scripts/: build-release.ps1  build-release.sh  build-ui.ps1  build-ui.sh  check_release.py  install.ps1  install.sh  run.ps1  run.sh  validate.ps1  validate.sh  verify-release.ps1  verify-release.sh
docs/templates/external_extension/src/companion_app/: __init__.py  server.py
docs/templates/external_extension/src/companion_app/frontend/: package-lock.json  package.json  vite.config.ts
docs/templates/external_extension/src/companion_app/frontend/src/: App.test.tsx  App.tsx  main.tsx  types.ts
docs/templates/external_extension/src/companion_app/frontend/src/api/: client.ts
docs/templates/external_extension/src/companion_app/frontend/src/styles/: App.module.scss  global.scss
docs/templates/external_extension/src/companion_app/frontend/src/test/: setup.ts
docs/templates/external_extension/src/companion_app/static/: app.js  index.html  styles.css
docs/templates/external_extension/src/companion_extension/: __init__.py  api_client.py  config_loader.py  config_schema.py  host_runtime_client.py  runtime_config.py  runtime_helpers.py  workload.py
docs/templates/external_extension/tests/: test_manifest_validation.py
infrastructure/: README.md  docker-compose.gitea-mysql.yml  docker-compose.gitea.yml
mesh_orchestration/: README.md  __init__.py  card.py  coordinator.py  run_demo.py  worker.py
model/: organization.json
orket/: __init__.py  board.py  conductor.py  discovery.py  driver.py  driver_support_cli.py  driver_support_conversation.py  driver_support_resources.py  events.py  exceptions.py  filesystem.py  hardware.py  llm.py  logging.py  naming.py  organization_loop.py  orket.py  permissions.json  permissions.py  permissions.schema.json  persistence.py  policy.py  prelude.py  preview.py  project_paths.py  repositories.py  runtime_paths.py  schema.py  session.py  settings.py  state.py  task.py  task_manager.py  temp_orchestrate.py  time_utils.py  tools.py  utils.py  webhook_server.py
orket_extension_sdk/: CHANGELOG.md  Makefile  README.md  __init__.py  audio.py  capabilities.py  controller.py  errors.py  import_scan.py  llm.py  manifest.py  memory.py  piper_tts.py  pyproject.toml  result.py  testing.py  tui.py  validate.py  voice.py  workload.py
orket_extension_sdk/workloads/: __init__.py  controller.py
(+6209 files in other folders)
