[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "orket"
version = "0.3.16"
description = "Local-first multi-agent LLM automation platform"
authors = [
    { name = "Jonathan McElyea" }
]
readme = "README.md"
requires-python = ">=3.10"

[project.scripts]
orket = "orket.interfaces.orket_bundle_cli:main"
orket-prompts = "orket.interfaces.prompts_cli:main"

dependencies = [
    # Core
    "jsonschema>=4.20.0,<5.0.0",
    "ollama>=0.4.0,<1.0.0",
    "pydantic>=2.5.0,<3.0.0",
    "python-dotenv>=1.0.0,<2.0.0",

    # Web framework
    "fastapi>=0.109.0,<1.0.0",
    "uvicorn>=0.27.0,<1.0.0",
    "python-multipart>=0.0.6,<1.0.0",

    # Async I/O (replacing sync libraries)
    "httpx>=0.26.0,<1.0.0",
    "aiosqlite>=0.19.0,<1.0.0",
    "aiofiles>=23.2.0,<26.0.0",

    # Security
    "python-jose[cryptography]>=3.3.0,<4.0.0",
    "passlib[bcrypt]>=1.7.0,<2.0.0",

    # System monitoring
    "psutil>=5.9.0,<7.0.0",

    # Image processing (optional heavy deps listed separately)
    "Pillow>=10.0.0,<13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<10.0.0",
    "pytest-cov>=5.0.0,<7.0.0",
    "pytest-asyncio>=0.23.0,<2.0.0",
    "respx>=0.20.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]
vision = [
    # Heavy ML dependencies - only install if needed
    "diffusers>=0.25.0",
    "transformers>=4.37.0",
    "accelerate>=0.25.0",
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "torchaudio>=2.1.0",
]
docs = [
    "pymupdf>=1.23.0",
    "python-docx>=1.1.0",
]
profile_engine_only = []
profile_developer_local = []
profile_api_runtime = [
    "fastapi>=0.109.0,<1.0.0",
    "uvicorn>=0.27.0,<1.0.0",
]
profile_api_webhook_runtime = [
    "fastapi>=0.109.0,<1.0.0",
    "uvicorn>=0.27.0,<1.0.0",
    "httpx>=0.26.0,<1.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["orket*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
asyncio_mode = "auto"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "E722",   # bare except (CRITICAL - never allow)
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
