[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "orket-extension-sdk"
description = "Public SDK contracts for external Orket extensions."
readme = "README.md"
requires-python = ">=3.11"
dynamic = ["version"]
authors = [
    { name = "Orket Core" }
]
dependencies = [
    "pydantic>=2.5.0,<3.0.0",
    "PyYAML>=6.0.0,<7.0.0",
]

[project.optional-dependencies]
tts = [
    "piper-tts>=1.3.0,<2.0.0",
    "numpy>=1.26.0,<3.0.0",
    "onnxruntime>=1.17.0,<2.0.0",
]
testing = [
    "pytest>=8.0.0,<10.0.0",
    "pytest-cov>=5.0.0,<7.0.0",
    "ruff>=0.3.0,<1.0.0",
]

[tool.setuptools]
include-package-data = true
packages = ["orket_extension_sdk", "orket_extension_sdk.workloads"]

[tool.setuptools.package-dir]
orket_extension_sdk = "."
"orket_extension_sdk.workloads" = "workloads"

[tool.setuptools.dynamic]
version = { attr = "orket_extension_sdk.__version__.__version__" }

[tool.setuptools.package-data]
orket_extension_sdk = ["py.typed"]
