[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "orket-companion-template"
version = "0.1.0"
description = "Template external extension package for Orket SDK workloads."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "orket-extension-sdk>=0.1.0",
    "httpx>=0.27.0,<1.0.0",
    "fastapi>=0.109.0,<1.0.0",
    "uvicorn>=0.27.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<10.0.0",
    "ruff>=0.3.0,<1.0.0",
    "build>=1.2.2,<2.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["companion_extension*", "companion_app*"]
